--- a/References/library-biblatex.bib
+++ b/References/library-biblatex.bib
@@ -429,6 +429,17 @@
   file = {/Users/py13je/Zotero/storage/6QT3XBCB/Bryan et al. - 2014 - ENZO AN ADAPTIVE MESH REFINEMENT CODE FOR ASTROPH.pdf}
 }
 
+@online{byayanMyDaughterHistory2022,
+  type = {Tweet},
+  title = {My Daughter's History Teacher Has Her Reading Some {{Ian Bremer}} ``Top 10 Risks of 2022'' Article and One of the 10 Is That Corporations Will Lose the War against Cancel Culture.},
+  author = {{🔪🔪🔪b\cyrchar\CYRYA yan🔪🔪🔪}},
+  date = {2022-01-11T12:54Z},
+  url = {https://twitter.com/murderxbryan/status/1480704571500646402},
+  urldate = {2022-01-11},
+  langid = {english},
+  organization = {{@murderxbryan}}
+}
+
 @article{callinghamAnisotropicWindsWolf2019,
   title = {Anisotropic Winds in a {{Wolf}}\textendash{{Rayet}} Binary Identify a Potential Gamma-Ray Burst Progenitor},
   author = {Callingham, J. R. and Tuthill, P. G. and Pope, B. J. S. and Williams, P. M. and Crowther, P. A. and Edwards, M. and Norris, B. and Kedziora-Chudczer, L.},
@@ -2132,7 +2143,7 @@
 
 @article{marcoteAUscaleRadioImaging2021,
   title = {{{AU-scale}} Radio Imaging of the Wind Collision Region in the Brightest and Most Luminous Non-Thermal Colliding Wind Binary {{Apep}}},
-  author = {Marcote, B and Callingham, J R and De Becker, M and Edwards, P G and Han, Y and Schulz, R and Stevens, J and Tuthill, P G},
+  author = {Marcote, B and Callingham, J R and De~Becker, M and Edwards, P G and Han, Y and Schulz, R and Stevens, J and Tuthill, P G},
   date = {2021-02-21},
   journaltitle = {Monthly Notices of the Royal Astronomical Society},
   shortjournal = {Monthly Notices of the Royal Astronomical Society},
@@ -2504,6 +2515,19 @@
   abstract = {We present infrared (IR) photometry of the WC9+B0I Wolf-Rayet binary system HD 137603 (WR 70) observed with telescopes at the European Southern Observatory, the South African Astronomical Observatory and the Anglo-Australian Telescope between 1983 and 2010 which shows persistent but variable circumstellar dust emission. Optical spectroscopy confirms the classification of the companion as a B0 supergiant and suggests that the Balmer lines in its spectrum suffer in-fill from wind emission. Re-examination of the reddening suggests a revised distance of 3.5 kpc. In the near-IR, the amplitude of variation increases with wavelength, with no significant variation in J (nor is there in the visible), implying that it is the amount of dust in the wind of WR 70 that is varying. Period searches show a period near 2.82 yr (1030 d) but the variations are not strictly regular and there are other factors affecting the dust formation and repeatability of the light curves. There may be a secondary period near 5.88 yr but there is no evidence for periods less than a year. A model of the spectral energy distribution in 1991 gives a dust formation rate of 5.9 \texttimes{} 10\textsuperscript{-7} M\textsubscript{{$\odot$}} yr\textsuperscript{-1}, around one-third of the available carbon from the WC9 wind going into the wind-collision region, estimating its size from average WC9 and B0Ia wind properties. The fraction of carbon going into dust varied between \texttildelow 11 and 46 per cent during our campaign, possibly as a consequence of the stars moving in an elliptical orbit.},
   langid = {english},
   file = {/Users/py13je/Zotero/storage/S9LN7F9W/Nugis and Lamers - 2013 - Long-term semiregular dust formation by the WC9+B0.pdf;/Users/py13je/Zotero/storage/MXGP46S8/abstract.html}
+}
+
+@article{oskinovaXrayEmissionSingle2015,
+  title = {X-Ray Emission from Single {{WR}} Stars},
+  author = {Oskinova, Lida M.},
+  date = {2015},
+  journaltitle = {Wolf-Rayet Stars : Proceedings of an International Workshop held in Potsdam, Germany, 1.\textendash 5. June 2015},
+  pages = {295--300},
+  url = {https://publishup.uni-potsdam.de/frontdoor/index/index/docId/8822},
+  urldate = {2022-01-10},
+  abstract = {In this review I briefly summarize our knowledge of the X-ray emission from single WN, WC, and WO stars. These stars have relatively modest X-ray luminosities, typically not exceeding 1L{$\odot$}. The analysis of X-ray spectra usually reveals thermal plasma with temperatures reaching a few x10 MK. X-ray variability is detected in some WN stars. At present we don't fully understand how X-ray radiation in produced in WR stars, albeit there are some promising research avenues, such as the presence of CIRs in the winds of some stars. To fully understand WR stars we need to unravel mechanisms of X-ray production in their winds.},
+  langid = {english},
+  file = {/Users/py13je/Zotero/storage/M4GPPIV6/Oskinova - 2015 - X-ray emission from single WR stars.pdf;/Users/py13je/Zotero/storage/JFPLMC2K/8822.html}
 }
 
 @book{oswaltPlanetsStarsStellar2013,
@@ -3238,6 +3262,22 @@
   file = {/Users/py13je/Zotero/storage/MWP6V6EY/Sander et al. - 2019 - The Galactic WC and WO stars. The impact of revise.pdf;/Users/py13je/Zotero/storage/SDM3L6F3/abstract.html}
 }
 
+@article{sandersXraysWolfRayetStars1982,
+  title = {X-Rays from {{Wolf-Rayet}} Stars Observed by the {{Einstein Observatory}}},
+  author = {Sanders, W. T. and Cassinelli, J. P. and van der Hucht, K. A.},
+  options = {useprefix=true},
+  date = {1982-01-01},
+  volume = {99},
+  pages = {589--595},
+  url = {https://ui.adsabs.harvard.edu/abs/1982IAUS...99..589S},
+  urldate = {2022-01-10},
+  abstract = {Preliminary results of three X-ray surveys are presented. Out of a sample of 20 stars, X-rays were detected from four Wolf-Rayet stars and two O8f(+) stars. The detected stars have about the same mean value as O stars for the X-ray to total luminosity ratio, L(x)/L = 10 to the -7th, but exhibit a much larger variation about the mean. The spectral energy distributions are also found to be like that of O stars in that they do not exhibit large attenuation of X-rays softer than 1 keV. This indicates that for both the O stars and WR stars much of the X-ray emission is coming from hot wisps or shocks in the outer regions of the winds and not from a thin source at the base of the wind. The general spectral shape and flux level place severe restrictions on models that attribute the lack of hydrogen emission lines to extremely high temperatures of the gas in the wind.},
+  eventtitle = {Wolf-{{Rayet Stars}}: {{Observations}}, {{Physics}}, {{Evolution}}},
+  keywords = {Astronomical Catalogs,Astrophysics,Heao 2,O Stars,Spaceborne Astronomy,Spectral Energy Distribution,Stellar Winds,Wolf-Rayet Stars,X Ray Astronomy,X Ray Stars},
+  annotation = {ADS Bibcode: 1982IAUS...99..589S},
+  file = {/Users/py13je/Zotero/storage/NV56N2D9/Sanders et al. - 1982 - X-rays from Wolf-Rayet stars observed by the Einst.pdf}
+}
+
 @article{sanyalMassiveMainsequenceStars2015,
   title = {Massive Main-Sequence Stars Evolving at the {{Eddington}} Limit},
   author = {Sanyal, D. and Grassitelli, L. and Langer, N. and Bestenlehner, J. M.},
@@ -3306,6 +3346,23 @@
   abstract = {\emph{Context. {$<$}i/{$>$}The principle definition of habitability for exoplanets is whether they can sustain liquid water on their surfaces, i.e. that they orbit within the habitable zone. However, the planet's magnetosphere should also be considered, since without it, an exoplanet's atmosphere may be eroded away by stellar winds.\emph{Aims. {$<$}i/{$>$}The aim of this paper is to investigate magnetospheric protection of a planet from the effects of stellar winds from solar-mass stars.\emph{Methods. {$<$}i/{$>$}We study hypothetical Earth-like exoplanets orbiting in the host star's habitable zone for a sample of 124 solar-mass stars. These are targets that have been observed by the Bcool Collaboration. Using two wind models, we calculate the magnetospheric extent of each exoplanet. These wind models are computationally inexpensive and allow the community to quickly estimate the magnetospheric size of magnetised Earth-analogues orbiting cool stars.\emph{Results. {$<$}i/{$>$}Most of the simulated planets in our sample can maintain a magnetosphere of \textasciitilde 5 Earth radii or larger. This suggests that magnetised Earth analogues in the habitable zones of solar analogues are able to protect their atmospheres and is in contrast to planets around young active M dwarfs. In general, we find that Earth-analogues around solar-type stars, of age 1.5 Gyr or older, can maintain at least a Paleoarchean Earth sized magnetosphere. Our results indicate that planets around 0.6\textendash 0.8 solar-mass stars on the low activity side of the Vaughan-Preston gap are the optimum observing targets for habitable Earth analogues.}}}}},
   langid = {english},
   file = {/Users/py13je/Zotero/storage/XZYQN69U/See et al. - 2014 - The effects of stellar winds on the magnetospheres.pdf;/Users/py13je/Zotero/storage/NISNKZXD/aa24323-14.html}
+}
+
+@article{sewardXraysEtaCarinae1979,
+  title = {X-Rays from {{Eta Carinae}} and the Surrounding Nebula.},
+  author = {Seward, F. D. and Forman, W. R. and Giacconi, R. and Griffiths, R. E. and Harnden, Jr., F. R. and Jones, C. and Pye, J. P.},
+  date = {1979-11-01},
+  journaltitle = {The Astrophysical Journal},
+  volume = {234},
+  pages = {L55-L58},
+  issn = {0004-637X},
+  doi = {10.1086/183108},
+  url = {https://ui.adsabs.harvard.edu/abs/1979ApJ...234L..55S},
+  urldate = {2022-01-10},
+  abstract = {Two X-ray pictures have been obtained of the Eta Car nebula using the imaging detectors of the Einstein Observatory. One covers a field 1-deg square with a resolution of 1 arcmin; the second covers a field 25 arcmin in diameter with resolution of a few arcsec. These show a region of diffuse X-ray emission with luminosity 10 to the 35th ergs/s. The sources have been positively identified as the peculiar object Eta Car, a Wolf-Rayet star, a cluster of O stars, and five individual O stars. The Eta Car X-ray source is extended and coincides with the outer shell of the diffuse object Eta Car itself. One X-ray bright spot may be emission from a central object within Eta Car.},
+  keywords = {Astrophysics,Carina Nebula:X Rays,Early Stars,Nebulae,Stellar Coronas,Stellar Luminosity,Wolf-Rayet Stars,Wolf-Rayet Stars:X Rays,X Ray Sources,X-Ray Sources:Optical Identifications},
+  annotation = {ADS Bibcode: 1979ApJ...234L..55S},
+  file = {/Users/py13je/Zotero/storage/BP9TLVVD/Seward et al. - 1979 - X-rays from Eta Carinae and the surrounding nebula.pdf}
 }
 
 @article{shenarWolfRayetBinaries2019,
@@ -3605,8 +3662,7 @@
 
 @article{thomasOrbitStellarMasses2021,
   title = {The Orbit and Stellar Masses of the Archetype Colliding-Wind Binary {{WR}}\,140},
-  author = {Thomas, Joshua D and Richardson, Noel D and Eldridge, J J and Schaefer, Gail H and Monnier, John D and Sana, Hugues and Moffat, Anthony F J and Williams, Peredur and Corcoran, Michael F and Stevens, Ian R and Weigelt, Gerd and Zainol, Farrah D and Anugu, Narsireddy and Le Bouquin, Jean-Baptiste and ten Brummelaar, Theo and Campos, Fran and Couperus, Andrew and Davies, Claire L and Ennis, Jacob and Eversberg, Thomas and Garde, Oliver and Gardner, Tyler and Fl\'o, Joan Guarro and Kraus, Stefan and Labdon, Aaron and Lanthermann, Cyprien and Leadbeater, Robin and Lester, T and Maki, Courtney and McBride, Brendan and Ozuyar, Dogus and Ribeiro, J and Setterholm, Benjamin and Stober, Berthold and Wood, Mackenna and Zurm\"uhl, Uwe},
-  options = {useprefix=true},
+  author = {Thomas, Joshua D and Richardson, Noel D and Eldridge, J J and Schaefer, Gail H and Monnier, John D and Sana, Hugues and Moffat, Anthony F J and Williams, Peredur and Corcoran, Michael F and Stevens, Ian R and Weigelt, Gerd and Zainol, Farrah D and Anugu, Narsireddy and Le~Bouquin, Jean-Baptiste and {ten~Brummelaar}, Theo and Campos, Fran and Couperus, Andrew and Davies, Claire L and Ennis, Jacob and Eversberg, Thomas and Garde, Oliver and Gardner, Tyler and Fl\'o, Joan Guarro and Kraus, Stefan and Labdon, Aaron and Lanthermann, Cyprien and Leadbeater, Robin and Lester, T and Maki, Courtney and McBride, Brendan and Ozuyar, Dogus and Ribeiro, J and Setterholm, Benjamin and Stober, Berthold and Wood, Mackenna and Zurm\"uhl, Uwe},
   date = {2021-07-11},
   journaltitle = {Monthly Notices of the Royal Astronomical Society},
   shortjournal = {Monthly Notices of the Royal Astronomical Society},
