Another section down and some light editing

--- a/Common_Symbols/Common_Symbols.tex
+++ b/Common_Symbols/Common_Symbols.tex
@@ -16,6 +16,7 @@ List of common symbols, if symbol requires a derivation, the appropriate equatio
 
   $a$ & Grain radius & \\
   $C$ & Courant-Friedrichs-Lewy condition & \\
+  $f$ & Wind shock fraction & Equation \ref{eq:windshockfraction} \\
   $h_e$ & Electron transparency & Section \ref{sec:wcrcooling} \\
   $H_{coll}$ & Grain heating rate due to ions & \\
   $H_{el}$ & Grain heating rate due to electrons & \\
