--- a/References/library-biblatex.bib
+++ b/References/library-biblatex.bib
@@ -429,17 +429,6 @@
   file = {/Users/py13je/Zotero/storage/6QT3XBCB/Bryan et al. - 2014 - ENZO AN ADAPTIVE MESH REFINEMENT CODE FOR ASTROPH.pdf}
 }
 
-@online{byayanMyDaughterHistory2022,
-  type = {Tweet},
-  title = {My Daughter's History Teacher Has Her Reading Some {{Ian Bremer}} ``Top 10 Risks of 2022'' Article and One of the 10 Is That Corporations Will Lose the War against Cancel Culture.},
-  author = {{🔪🔪🔪b\cyrchar\CYRYA yan🔪🔪🔪}},
-  date = {2022-01-11T12:54Z},
-  url = {https://twitter.com/murderxbryan/status/1480704571500646402},
-  urldate = {2022-01-11},
-  langid = {english},
-  organization = {{@murderxbryan}}
-}
-
 @article{callinghamAnisotropicWindsWolf2019,
   title = {Anisotropic Winds in a {{Wolf}}\textendash{{Rayet}} Binary Identify a Potential Gamma-Ray Burst Progenitor},
   author = {Callingham, J. R. and Tuthill, P. G. and Pope, B. J. S. and Williams, P. M. and Crowther, P. A. and Edwards, M. and Norris, B. and Kedziora-Chudczer, L.},
@@ -2139,6 +2128,23 @@
   langid = {english},
   keywords = {Astrophysics - Astrophysics of Galaxies,Astrophysics - Solar and Stellar Astrophysics},
   file = {/Users/py13je/Zotero/storage/IX6B6JWI/Marchenko and Moffat - 2017 - Search for Polycyclic Aromatic Hydrocarbons in the.pdf}
+}
+
+@article{marchenkoWolfRayetBinaryV4441997,
+  title = {The {{Wolf-Rayet Binary V444 Cygni Under}} the {{Spectroscopic Microscope}}. {{II}}. {{Physical Parameters}} of the {{Wolf-Rayet Wind}} and the {{Zone}} of {{Wind Collision}}},
+  author = {Marchenko, S. V. and Moffat, A. F. J. and Eenens, P. R. J. and Cardona, O. and Echevarria, J. and Hervieux, Y.},
+  date = {1997-08-01},
+  journaltitle = {The Astrophysical Journal},
+  volume = {485},
+  pages = {826--838},
+  issn = {0004-637X},
+  doi = {10.1086/304435},
+  url = {https://ui.adsabs.harvard.edu/abs/1997ApJ...485..826M},
+  urldate = {2022-01-11},
+  abstract = {New, extensive, high signal-to-noise, phase-dependent optical spectroscopy, along with simultaneous narrowband continuum photometry, leads to restrictions on the electron temperature and density in the wind close to the Wolf-Rayet component of the eclipsing binary V444 Cygni (WN5 + O6 V-III). Detailed study of the phase dependence of the equivalent widths and line profiles of the W-R star reveals significant ionization stratification in the W-R wind. Our previous discussion of the wind-wind collision effects on He I lines is extended to He II lines. We find that (1) the wind-wind collision zone is detached from the surface of the O star; (2) the radiation field of the O star does not inhibit the initial acceleration of the W-R wind; however, it does brake the flow just prior to entrance into the collision zone; (3) the shocked gas experiences rapid, tcool {$<\sptilde$} (2-4) \texttimes{} 104 s, and profound cooling via radiative losses, leading to high compression of the postshock gas.},
+  keywords = {Stars: Binaries: Eclipsing,stars: individual (V444 Cyg),Stars: Mass Loss,Stars: Wolf-Rayet},
+  annotation = {ADS Bibcode: 1997ApJ...485..826M},
+  file = {/Users/py13je/Zotero/storage/CJLF4Q5W/Marchenko et al. - 1997 - The Wolf-Rayet Binary V444 Cygni Under the Spectro.pdf}
 }
 
 @article{marcoteAUscaleRadioImaging2021,
