Starting a bit of dust chemistry

--- a/Common_Symbols/Common_Symbols.tex
+++ b/Common_Symbols/Common_Symbols.tex
@@ -54,12 +54,14 @@ List of common symbols, if symbol requires a derivation, the appropriate equatio
 
   \hline
 
+  $\sigma$ & Stefan-Boltzmann constant & \SI{5.670e-5}{erg.cm^{-2}.s^{-1}.K^{-4}} \\
+
   \si{\solarmass} & Solar mass & \num{1.988e+33} \si{\gram} \\
-  \si{\solarmass\per\year} & Solar mass per year & \num{6.301e+25} \si{\gram\per\second} \\
-  \si{\solarluminosity} & Solar Luminosity & \num{3.828e+33} \si{\erg\per\second} \\
-  \si{\au} & Astronomical Unit & \num{1.496e+13} \si{\centi\metre} \\
-  \si{\pc} & Parsec & \num{3.086e+18} \si{\centi\metre} \\
-  ``warm'' & Warm temperature regime & Between $10^4$ and $10^5$ \si{\kelvin}, personally \\
+  \si{\solarmass\per\year} & Solar mass per year & \SI{6.301e+25}{\gram\per\second} \\
+  \si{\solarluminosity} & Solar Luminosity & \SI{3.828e+33}{\erg\per\second} \\
+  \si{\au} & Astronomical Unit & \SI{1.496e+13}{\centi\metre} \\
+  \si{\pc} & Parsec & \SI{3.086e+18}{\centi\metre} \\
+  ``Warm'' & Warm temperature regime & Between \num{1e4} and \SI{1e5}{\kelvin}, personally \\
 
 \end{longtable}
 
