--- a/References/library-biblatex.bib
+++ b/References/library-biblatex.bib
@@ -59,6 +59,12 @@
   file = {/Users/py13je/Zotero/storage/L5VGDVVV/Sutherland and Dopita - 1993 - Cooling Functions for Low-Density Astrophysical Pl.pdf}
 }
 
+@online{1996ApJ457244D,
+  title = {{{1996ApJ}}...457..{{244D Page}} 244},
+  url = {https://adsabs.harvard.edu/full/1996ApJ...457..244D},
+  urldate = {2022-01-16}
+}
+
 @online{2000A360227N,
   title = {{{2000A}}\&{{A}}...360..{{227N Page}} 227},
   url = {http://adsabs.harvard.edu/full/2000A%26A...360..227N},
@@ -936,6 +942,24 @@
   file = {/Users/py13je/Zotero/storage/K79FT2B2/Draine and Salpeter - 1979 - Destruction mechanisms for interstellar dust.pdf}
 }
 
+@article{draineInfraredEmissionInterstellar2001,
+  title = {Infrared {{Emission}} from {{Interstellar Dust}}. {{I}}. {{Stochastic Heating}} of {{Small Grains}}},
+  author = {Draine, B. T. and Li, Aigen},
+  date = {2001-04-20},
+  journaltitle = {The Astrophysical Journal},
+  shortjournal = {ApJ},
+  volume = {551},
+  number = {2},
+  pages = {807},
+  publisher = {{IOP Publishing}},
+  issn = {0004-637X},
+  doi = {10.1086/320227},
+  url = {https://iopscience.iop.org/article/10.1086/320227/meta},
+  urldate = {2022-01-16},
+  langid = {english},
+  file = {/Users/py13je/Zotero/storage/FA3QNHKY/Draine and Li - 2001 - Infrared Emission from Interstellar Dust. I. Stoch.pdf;/Users/py13je/Zotero/storage/FTYU4IMG/320227.html}
+}
+
 @article{drainePhysicsDustGrains1979,
   title = {On the Physics of Dust Grains in Hot Gas},
   author = {Draine, B. T. and Salpeter, E. E.},
@@ -966,6 +990,23 @@
   abstract = {We examine the possibility of detecting grains formed in supemovae by observations of their emission in the infrared. The basic processes determining the temperature and infrared radiation of grains in supemovae environments are analyzed, and the results are used to estimate the infrared emission from the highly metal enriched ``fast moving knots'' in Cas A. The predicted fluxes he within the reach of current ground-based facilities at 10 jam, and their emission should be detectable throughout the infrared band with cryogenic space telescopes.},
   langid = {english},
   file = {/Users/py13je/Zotero/storage/2GCINQSD/Dwek and Werner - 1981 - The infrared emission from supernova condensates.pdf}
+}
+
+@article{dwekCoolingSputteringInfrared1996,
+  title = {Cooling, {{Sputtering}}, and {{Infrared Emission}} from {{Dust Grains}} in {{Fast Nonradiative Shocks}}},
+  author = {Dwek, Eli and Foster, Scott M. and Vancura, Olaf},
+  date = {1996-01-01},
+  journaltitle = {The Astrophysical Journal},
+  volume = {457},
+  pages = {244},
+  issn = {0004-637X},
+  doi = {10.1086/176725},
+  url = {https://ui.adsabs.harvard.edu/abs/1996ApJ...457..244D},
+  urldate = {2022-01-16},
+  abstract = {We model the dynamics, the destruction by sputtering, and the infrared (IR) emission from collisionally heated dust grains in fast ({$\geq$} 400 km s-1) astrophysical shocks in order to develop IR diagnostics for the destruction of grains in these environments. The calculations take into account the feedback from sputtering and IR emission on the gas-phase abundances, the cooling, and the ionization and thermal structure of the shock. Sputtering changes the initial grain size distribution, creating a deficiency of small (radius {$<$}50 \AA ) grains compared to their preshock abundances. The altered grain size distribution depends on shock velocity and the density of the interstellar medium. Dust particles with sizes below {$\asymp$}300 \AA{} are stochastically heated, undergo temperature fluctuations, and radiate an excess of near-infrared emission ({$\lambda$} {$\leq$} 40 {$\mu$}m) over that expected for grains in thermal equilibrium. This near-infrared excess is a measure of the abundance of small grains and therefore a powerful diagnostic for the amount of destruction the grains were subjected to in the shock. We present here IR spectra from collisionally heated dust for a variety of shocks, and depict the changes in the spectra as a function of postshock column density. Our studies compliment those of Vancura et al. that examined the effects of the release of the sputtered refractory elements on the ultraviolet and X-ray emission. Multiwavelength observations at X-ray, UV, and IR wavelengths are therefore essential in piecing together a comprehensive picture of the physics of grain destruction in fast astrophysical shocks.},
+  keywords = {EXTINCTION,INFRARED: ISM: CONTINUUM,ISM: DUST,RADIATION MECHANISMS: THERMAL,SHOCK WAVES},
+  annotation = {ADS Bibcode: 1996ApJ...457..244D},
+  file = {/Users/py13je/Zotero/storage/T3G6BFMZ/Dwek et al. - 1996 - Cooling, Sputtering, and Infrared Emission from Du.pdf}
 }
 
 @book{dysonPhysicsInterstellarMedium1997,
@@ -1484,22 +1525,22 @@
   file = {/Users/py13je/Zotero/storage/W9ZXX9JM/Henley et al. - 2003 - Theoretical X-ray line profiles from colliding win.pdf}
 }
 
-@article{herbst_chemistry_nodate,
-  title = {Chemistry in the {{Interstellar Medium}}},
-  author = {Herbst, Eric},
-  pages = {27},
-  abstract = {Over the past 25 years, astronomers have discovered a large number of gas-phase molecules in space, ranging in size up to more than 10 atoms. The molecules, which are mainly organic in nature and comprise both normal and abnormal species, are located between stars, in regions known as interstellar clouds, which contain both gaseous material and material in the form of dust particles. The gas is well characterized by high-resolution spetroscopy, whereas the dust is less well characterized by low-resolution infrared spectroscopy and the scattering of visible radiation. The gaseous molecules are synthesized in situ from precursor atomic material, which derives from the mass loss of previous generations of stars. The chemical reactions involved in this synthesis are discussed in some detail as are the models that seek to reproduce the observed abundances of molecules.},
-  langid = {english},
-  file = {/Users/py13je/Zotero/storage/QWV2YC6K/Herbst - Chemistry in the Interstellar Medium.pdf}
-}
-
-@article{herbst_complex_2009,
-  title = {Complex Organic Interstellar Molecules},
-  author = {Herbst, Eric and Van Dishoeck, Ewine F},
+@article{herbstComplexOrganicInterstellar2009,
+  title = {Complex {{Organic Interstellar Molecules}}},
+  author = {Herbst, Eric and van Dishoeck, Ewine F.},
+  options = {useprefix=true},
   date = {2009},
   journaltitle = {Annual Review of Astronomy and Astrophysics},
   volume = {47},
-  pages = {427--480}
+  number = {1},
+  pages = {427--480},
+  doi = {10.1146/annurev-astro-082708-101654},
+  url = {https://doi.org/10.1146/annurev-astro-082708-101654},
+  urldate = {2022-01-16},
+  abstract = {Of the over 150 different molecular species detected in the interstellar and circumstellar media, approximately 50 contain 6 or more atoms. These molecules, labeled complex by astronomers if not by chemists, all contain the element carbon and so can be called organic. In the interstellar medium, complex molecules are detected in the denser sources only. Although, with one exception, complex molecules have only been detected in the gas phase, there is strong evidence that they can be formed in ice mantles on interstellar grains. The nature of the gaseous complex species depends dramatically on the source where they are found: in cold, dense regions they tend to be unsaturated (hydrogen-poor) and exotic, whereas in young stellar objects, they tend to be quite saturated (hydrogen-rich) and terrestrial in nature. Based on both their spectra and chemistry, complex molecules are excellent probes of the physical conditions and history of the sources where they reside. Because they are detected in young stellar objects, complex molecules are expected to be common ingredients for new planetary systems. In this review, we discuss both the observation and chemistry of complex molecules in assorted interstellar regions in the Milky Way.},
+  keywords = {astrochemistry,complex molecules,interstellar medium,interstellar molecules,star formation},
+  annotation = {\_eprint: https://doi.org/10.1146/annurev-astro-082708-101654},
+  file = {/Users/py13je/Zotero/storage/QA7WC3XS/Herbst and van Dishoeck - 2009 - Complex Organic Interstellar Molecules.pdf}
 }
 
 @article{hill_modelling_2018,
@@ -4078,7 +4119,7 @@
   file = {/Users/py13je/Zotero/storage/LKE6T7LM/Wendt - 2008 - Computational Fluid Dynamics An Introduction.pdf}
 }
 
-@book{whittet_dust_2002,
+@book{whittetDustGalacticEnvironment2002,
   title = {Dust in the {{Galactic Environment}}},
   author = {Whittet, D. C. B.},
   date = {2002-10-21},
@@ -4089,7 +4130,7 @@
   abstract = {Dust is a ubiquitous feature of the cosmos, impinging directly or indirectly on most fields of modern astronomy and astrophysics. Dust in the Galactic},
   isbn = {978-1-4822-6864-5},
   langid = {english},
-  file = {/Users/py13je/Zotero/storage/3X7LLDC9/Whittet - 2002 - Dust in the Galactic Environment.pdf}
+  file = {/Users/py13je/Zotero/storage/CHE339J6/[Series in astronomy and astrophysics] D.C.B Whittet - Dust in the Galactic Environment (2003, IOP) - libgen.lc.pdf}
 }
 
 @article{wiescherIgnitionCoolingXRay2000,
@@ -4170,6 +4211,18 @@
   abstract = {We present high-resolution infrared (2\textendash 18 {$\mu$}m) images of the archetypal periodic dust-making Wolf\textendash Rayet binary system WR 140 (HD 193793) taken between 2001 and 2005, and multicolour (J \textendash{} [19.5]) photometry observed between 1989 and 2001. The images resolve the dust cloud formed by WR 140 in 2001, allowing us to track its expansion and cooling, while the photometry allows tracking the average temperature and total mass of the dust. The combination of the two data sets constrains the optical properties of the dust, and suggests that they differ from those of the dust made by the WC9 dust-makers, including the classical `pinwheel', WR 104. The photometry of individual dust emission features shows them to be significantly redder in (nbL \textendash [3.99]), but bluer in ([7.9]\textendash [12.5]), than the binary, as expected from the spectra of heated dust and the stellar wind of a Wolf\textendash Rayet star. The most persistent dust features, two concentrations at the ends of a `bar' of emission to the south of the star, were observed to move with constant proper motions of 324 {$\pm$} 8 and 243 {$\pm$} 7 mas yr-1. Longer wavelength (4.68 and 12.5 {$\mu$}m) images show dust emission from the corresponding features from the previous (1993) periastron passage and dust formation episode, showing that the dust expanded freely in a low-density void for over a decade, with dust features repeating from one cycle to the next. A third persistent dust concentration to the east of the binary (the `arm') was found to have a proper motion {$\sim$}320 mas yr-1, and a dust mass about one-quarter that of the `bar'. Extrapolation of the motions of the concentrations back to the binary suggests that the eastern `arm' began expansion four to five months earlier than those in the southern `bar', consistent with the projected rotation of the binary axis and wind-collision region (WCR) on the sky. A comparison of model dust images and the observations constrains the intervals when the WCR was producing sufficiently compressed wind for dust nucleation in the WCR, and suggests that the distribution of this material was not uniform about the axis of the WCR, but more abundant in the following edge in the orbital plane.},
   langid = {english},
   file = {/Users/py13je/Zotero/storage/735ICNE6/Williams et al. - 2009 - Orbitally modulated dust formation by the WC7+O5 c.pdf}
+}
+
+@book{williamsChemistryCosmicDust2015,
+  title = {The {{Chemistry}} of {{Cosmic Dust}}},
+  author = {Williams, David A. and Cecchi-Pestellini, C.},
+  date = {2015-11-18},
+  doi = {10.1039/9781782623694},
+  url = {https://pubs.rsc.org/en/content/ebook/978-1-78262-047-1},
+  urldate = {2022-01-16},
+  abstract = {It has been firmly established over the last quarter century that cosmic dust plays important roles in astrochemistry. The consequences of these roles affect the formation of planets, stars and even galaxies. Cosmic dust has been a controversial topic but there is now a considerable measure of agreement as to its nature and roles in astronomy, and its initiation of astrobiology. The subject has stimulated an enormous research effort, with researchers in many countries now involved in laboratory research and in \emph{ab initio} computations. This is the first book devoted to a study of the chemistry of cosmic dust, presenting current thinking on the subject distilled from many publications in surface and solid-state science, and in astronomy. The authors discuss the nature of dust, its formation and evolution, the chemistry it can promote on its surfaces, and the consequences of these functions. The purpose of this book is to review current understanding and to indicate where future work is required. Mainly intended for researchers in the field of astrochemistry, the book could also be used as the basis of a course for postgraduate students who have an interest in astrochemistry.},
+  isbn = {978-1-78262-047-1},
+  langid = {english}
 }
 
 @article{williamsCollidingwindWC9OB2015,
@@ -4387,6 +4440,23 @@
   langid = {english},
   keywords = {Astrophysics - Solar and Stellar Astrophysics},
   file = {/Users/py13je/Zotero/storage/KMAIGT8I/Williams - 2011 - WR 140 in the Infrared.pdf}
+}
+
+@article{wolfireNeutralAtomicPhases1995,
+  title = {The {{Neutral Atomic Phases}} of the {{Interstellar Medium}}},
+  author = {Wolfire, M. G. and Hollenbach, D. and McKee, C. F. and Tielens, A. G. G. M. and Bakes, E. L. O.},
+  date = {1995-04-01},
+  journaltitle = {The Astrophysical Journal},
+  volume = {443},
+  pages = {152},
+  issn = {0004-637X},
+  doi = {10.1086/175510},
+  url = {https://ui.adsabs.harvard.edu/abs/1995ApJ...443..152W},
+  urldate = {2022-01-16},
+  abstract = {We calculate the thermal equilibrium gas temperature of the diffuse interstellar medium. Our method incorporates a new photoelectric heating rate from small grains and polycyclic aromatic hydrocarbons (PAHs) that accounts for a size distribution of particles extending from 100 to 3 A radius. We also include a detailed treatment of the ionization rates and heating due to the soft X-ray background and due to cosmic rays. Phase diagrams (thermal pressure P versus hydrogen density n) are presented for gas that is illuminated by local interstellar far-ultraviolet (FUV) and X-ray radiation fields. A stable two-phase medium is produced with thermal pressure in the range P/k approximately = to 103-4 K/cc. We demonstrate that photoelectric heating from PAHs dominates in the warm neutral phase (WNM) and cold neutral phase (CNM). If the C II (158 micrometers cooling per hydrogen nucleus in the solar neighborhood represents an average value for the Galaxy, we predict LCII approximately = to 7 x 107 solar luminosities from the CNM in the Galaxy, comparable to that observed by the Cosmic Background Explorer (COBE). We discuss the dependence of the results on absorbing column density, gas phase abundances, dust abundances and metallicity, FUV field, and the X-ray radiation field. These results will be useful in modeling the multiphase structure of high-velocity clouds in the halo, the interstellar matter (ISM) at other galactocentric radii, and the ISM in external galaxies and galactic nuclei.},
+  keywords = {Abundance,Astrophysics,Atomic Energy Levels,Cosmic Background Explorer Satellite,Cosmic X Rays,EXTINCTION,Gas Heating,Gas Temperature,Interstellar Matter,Ion Production Rates,ISM: DUST,ISM: GENERAL,Metallicity,Particle Size Distribution,Phase Diagrams,Photoelectric Effect,Polycyclic Aromatic Hydrocarbons,Radiation Distribution,Thermodynamic Equilibrium},
+  annotation = {ADS Bibcode: 1995ApJ...443..152W},
+  file = {/Users/py13je/Zotero/storage/SFAQ5IRC/Wolfire et al. - 1995 - The Neutral Atomic Phases of the Interstellar Medi.pdf}
 }
 
 @article{WolfRayetStarsProceedings2015,
